drm/amdgpu: fix cyan_skillfish2 gpu info fw handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35284,6 +35284,7 @@
 	patches.suse/can-sja1000-fix-max-irq-loop-handling.patch
 	patches.suse/can-gs_usb-gs_usb_xmit_callback-fix-handling-of-fail.patch
 	patches.suse/can-sun4i_can-sun4i_can_interrupt-fix-max-irq-loop-h.patch
+	patches.suse/drm-amdgpu-fix-cyan_skillfish2-gpu-info-fw-handling.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
