--- a/series.conf
+++ b/series.conf
@@ -56694,6 +56694,7 @@
 	patches.suse/can-sja1000-fix-max-irq-loop-handling.patch
 	patches.suse/can-gs_usb-gs_usb_xmit_callback-fix-handling-of-fail.patch
 	patches.suse/can-sun4i_can-sun4i_can_interrupt-fix-max-irq-loop-h.patch
+	patches.suse/Revert-drm-amd-display-Move-setup_stream_attribute.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
