drm/xe: Fix conversion from clock ticks to milliseconds (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56695,6 +56695,7 @@
 	patches.suse/can-gs_usb-gs_usb_xmit_callback-fix-handling-of-fail.patch
 	patches.suse/can-sun4i_can-sun4i_can_interrupt-fix-max-irq-loop-h.patch
 	patches.suse/Revert-drm-amd-display-Move-setup_stream_attribute.patch
+	patches.suse/drm-xe-Fix-conversion-from-clock-ticks-to-millisecon.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
