--- a/series.conf
+++ b/series.conf
@@ -56696,6 +56696,7 @@
 	patches.suse/can-sun4i_can-sun4i_can_interrupt-fix-max-irq-loop-h.patch
 	patches.suse/Revert-drm-amd-display-Move-setup_stream_attribute.patch
 	patches.suse/drm-xe-Fix-conversion-from-clock-ticks-to-millisecon.patch
+	patches.suse/xhci-fix-stale-flag-preventig-URBs-after-link-state-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
