--- a/series.conf
+++ b/series.conf
@@ -13537,6 +13537,7 @@
 	patches.suse/xhci-fix-stale-flag-preventig-URBs-after-link-state-.patch
 	patches.suse/usb-storage-Fix-memory-leak-in-USB-bulk-transport.patch
 	patches.suse/drivers-usb-dwc3-fix-PCI-parent-check.patch
+	patches.suse/usb-gadget-f_eem-Fix-memory-leak-in-eem_unwrap.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
