iio: adc: stm32-dfsdm: fix st,adc-alt-channel property handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13547,6 +13547,7 @@
 	patches.suse/slimbus-ngd-Fix-reference-count-leak-in-qcom_slim_ng.patch
 	patches.suse/most-usb-fix-double-free-on-late-probe-failure.patch
 	patches.suse/iio-adc-rtq6056-Correct-the-sign-bit-index.patch
+	patches.suse/iio-adc-stm32-dfsdm-fix-st-adc-alt-channel-property-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
