--- a/series.conf
+++ b/series.conf
@@ -13539,6 +13539,7 @@
 	patches.suse/drivers-usb-dwc3-fix-PCI-parent-check.patch
 	patches.suse/usb-gadget-f_eem-Fix-memory-leak-in-eem_unwrap.patch
 	patches.suse/usb-typec-ucsi-psy-Set-max-current-to-zero-when-disc.patch
+	patches.suse/usb-dwc3-Fix-race-condition-between-concurrent-dwc3_.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
