--- a/series.conf
+++ b/series.conf
@@ -13550,6 +13550,7 @@
 	patches.suse/iio-adc-stm32-dfsdm-fix-st-adc-alt-channel-property-.patch
 	patches.suse/iio-adc-ad7280a-fix-ad7280_store_balance_timer.patch
 	patches.suse/iio-common-ssp_sensors-Fix-an-error-handling-path-ss.patch
+	patches.suse/iio-accel-fix-ADXL355-startup-race-condition.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
