--- a/series.conf
+++ b/series.conf
@@ -13552,6 +13552,7 @@
 	patches.suse/iio-common-ssp_sensors-Fix-an-error-handling-path-ss.patch
 	patches.suse/iio-accel-fix-ADXL355-startup-race-condition.patch
 	patches.suse/iio-imu-st_lsm6dsx-fix-array-size-for-st_lsm6dsx_set.patch
+	patches.suse/iio-humditiy-hdc3020-fix-units-for-temperature-and-h.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
