mmc: sdhci-of-dwcmshc: Promote the th1520 reset handling to ip level (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13529,6 +13529,7 @@
 	patches.suse/drm-amdgpu-fix-cyan_skillfish2-gpu-info-fw-handling.patch
 	patches.suse/drm-sti-fix-device-leaks-at-component-probe.patch
 	patches.suse/drm-xe-Fix-conversion-from-clock-ticks-to-millisecon.patch
+	patches.suse/mmc-sdhci-of-dwcmshc-Promote-the-th1520-reset-handli.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
