--- a/series.conf
+++ b/series.conf
@@ -13531,6 +13531,7 @@
 	patches.suse/drm-xe-Fix-conversion-from-clock-ticks-to-millisecon.patch
 	patches.suse/mmc-sdhci-of-dwcmshc-Promote-the-th1520-reset-handli.patch
 	patches.suse/mailbox-mailbox-test-Fix-debugfs_create_dir-error-ch.patch
+	patches.suse/mailbox-mtk-cmdq-Refine-DMA-address-handling-for-the.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
