iio: humditiy: hdc3020: fix units for thresholds and hysteresis (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13553,6 +13553,7 @@
 	patches.suse/iio-accel-fix-ADXL355-startup-race-condition.patch
 	patches.suse/iio-imu-st_lsm6dsx-fix-array-size-for-st_lsm6dsx_set.patch
 	patches.suse/iio-humditiy-hdc3020-fix-units-for-temperature-and-h.patch
+	patches.suse/iio-humditiy-hdc3020-fix-units-for-thresholds-and-hy.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
