--- a/series.conf
+++ b/series.conf
@@ -13548,6 +13548,7 @@
 	patches.suse/most-usb-fix-double-free-on-late-probe-failure.patch
 	patches.suse/iio-adc-rtq6056-Correct-the-sign-bit-index.patch
 	patches.suse/iio-adc-stm32-dfsdm-fix-st-adc-alt-channel-property-.patch
+	patches.suse/iio-adc-ad7280a-fix-ad7280_store_balance_timer.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
