--- a/series.conf
+++ b/series.conf
@@ -13557,6 +13557,7 @@
 	patches.suse/iio-st_lsm6dsx-Fixed-calibrated-timestamp-calculatio.patch
 	patches.suse/firmware-stratix10-svc-fix-bug-in-saving-controller-.patch
 	patches.suse/regulator-rtq2208-Correct-buck-group2-phase-mapping-.patch
+	patches.suse/regulator-rtq2208-Correct-LDO2-logic-judgment-bits.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
