usb: renesas_usbhs: Fix synchronous external abort on unbind (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13532,6 +13532,7 @@
 	patches.suse/mmc-sdhci-of-dwcmshc-Promote-the-th1520-reset-handli.patch
 	patches.suse/mailbox-mailbox-test-Fix-debugfs_create_dir-error-ch.patch
 	patches.suse/mailbox-mtk-cmdq-Refine-DMA-address-handling-for-the.patch
+	patches.suse/usb-renesas_usbhs-Fix-synchronous-external-abort-on-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
