--- a/series.conf
+++ b/series.conf
@@ -13541,6 +13541,7 @@
 	patches.suse/usb-typec-ucsi-psy-Set-max-current-to-zero-when-disc.patch
 	patches.suse/usb-dwc3-Fix-race-condition-between-concurrent-dwc3_.patch
 	patches.suse/usb-uas-fix-urb-unmapping-issue-when-the-uas-device-.patch
+	patches.suse/USB-storage-Remove-subclass-and-protocol-overrides-f.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
