drivers/usb/dwc3: fix PCI parent check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13536,6 +13536,7 @@
 	patches.suse/usb-cdns3-Fix-double-resource-release-in-cdns3_pci_p.patch
 	patches.suse/xhci-fix-stale-flag-preventig-URBs-after-link-state-.patch
 	patches.suse/usb-storage-Fix-memory-leak-in-USB-bulk-transport.patch
+	patches.suse/drivers-usb-dwc3-fix-PCI-parent-check.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
