usb: gadget: renesas_usbf: Handle devm_pm_runtime_enable() errors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13542,6 +13542,7 @@
 	patches.suse/usb-dwc3-Fix-race-condition-between-concurrent-dwc3_.patch
 	patches.suse/usb-uas-fix-urb-unmapping-issue-when-the-uas-device-.patch
 	patches.suse/USB-storage-Remove-subclass-and-protocol-overrides-f.patch
+	patches.suse/usb-gadget-renesas_usbf-Handle-devm_pm_runtime_enabl.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
