--- a/series.conf
+++ b/series.conf
@@ -13527,6 +13527,7 @@
 	patches.suse/can-sun4i_can-sun4i_can_interrupt-fix-max-irq-loop-h.patch
 	patches.suse/Revert-drm-amd-display-Move-setup_stream_attribute.patch
 	patches.suse/drm-amdgpu-fix-cyan_skillfish2-gpu-info-fw-handling.patch
+	patches.suse/drm-sti-fix-device-leaks-at-component-probe.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
