drm/xe: Fix conversion from clock ticks to milliseconds (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13528,6 +13528,7 @@
 	patches.suse/Revert-drm-amd-display-Move-setup_stream_attribute.patch
 	patches.suse/drm-amdgpu-fix-cyan_skillfish2-gpu-info-fw-handling.patch
 	patches.suse/drm-sti-fix-device-leaks-at-component-probe.patch
+	patches.suse/drm-xe-Fix-conversion-from-clock-ticks-to-millisecon.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
