usb: cdns3: Fix double resource release in cdns3_pci_probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13533,6 +13533,7 @@
 	patches.suse/mailbox-mailbox-test-Fix-debugfs_create_dir-error-ch.patch
 	patches.suse/mailbox-mtk-cmdq-Refine-DMA-address-handling-for-the.patch
 	patches.suse/usb-renesas_usbhs-Fix-synchronous-external-abort-on-.patch
+	patches.suse/usb-cdns3-Fix-double-resource-release-in-cdns3_pci_p.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
