--- a/series.conf
+++ b/series.conf
@@ -13544,6 +13544,7 @@
 	patches.suse/USB-storage-Remove-subclass-and-protocol-overrides-f.patch
 	patches.suse/usb-gadget-renesas_usbf-Handle-devm_pm_runtime_enabl.patch
 	patches.suse/serial-amba-pl011-prefer-dma_mapping_error-over-expl.patch
+	patches.suse/slimbus-ngd-Fix-reference-count-leak-in-qcom_slim_ng.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
