iio: st_lsm6dsx: Fixed calibrated timestamp calculation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13554,6 +13554,7 @@
 	patches.suse/iio-imu-st_lsm6dsx-fix-array-size-for-st_lsm6dsx_set.patch
 	patches.suse/iio-humditiy-hdc3020-fix-units-for-temperature-and-h.patch
 	patches.suse/iio-humditiy-hdc3020-fix-units-for-thresholds-and-hy.patch
+	patches.suse/iio-st_lsm6dsx-Fixed-calibrated-timestamp-calculatio.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
