iio: imu: st_lsm6dsx: fix array size for st_lsm6dsx_settings fields (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13551,6 +13551,7 @@
 	patches.suse/iio-adc-ad7280a-fix-ad7280_store_balance_timer.patch
 	patches.suse/iio-common-ssp_sensors-Fix-an-error-handling-path-ss.patch
 	patches.suse/iio-accel-fix-ADXL355-startup-race-condition.patch
+	patches.suse/iio-imu-st_lsm6dsx-fix-array-size-for-st_lsm6dsx_set.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
