most: usb: fix double free on late probe failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13545,6 +13545,7 @@
 	patches.suse/usb-gadget-renesas_usbf-Handle-devm_pm_runtime_enabl.patch
 	patches.suse/serial-amba-pl011-prefer-dma_mapping_error-over-expl.patch
 	patches.suse/slimbus-ngd-Fix-reference-count-leak-in-qcom_slim_ng.patch
+	patches.suse/most-usb-fix-double-free-on-late-probe-failure.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
