--- a/series.conf
+++ b/series.conf
@@ -13535,6 +13535,7 @@
 	patches.suse/usb-renesas_usbhs-Fix-synchronous-external-abort-on-.patch
 	patches.suse/usb-cdns3-Fix-double-resource-release-in-cdns3_pci_p.patch
 	patches.suse/xhci-fix-stale-flag-preventig-URBs-after-link-state-.patch
+	patches.suse/usb-storage-Fix-memory-leak-in-USB-bulk-transport.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
