xhci: fix stale flag preventig URBs after link state error is cleared (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13534,6 +13534,7 @@
 	patches.suse/mailbox-mtk-cmdq-Refine-DMA-address-handling-for-the.patch
 	patches.suse/usb-renesas_usbhs-Fix-synchronous-external-abort-on-.patch
 	patches.suse/usb-cdns3-Fix-double-resource-release-in-cdns3_pci_p.patch
+	patches.suse/xhci-fix-stale-flag-preventig-URBs-after-link-state-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
