spi: nxp-fspi: Propagate fwnode in ACPI case as well (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13560,6 +13560,7 @@
 	patches.suse/regulator-rtq2208-Correct-LDO2-logic-judgment-bits.patch
 	patches.suse/spi-bcm63xx-fix-premature-CS-deassertion-on-RX-only-.patch
 	patches.suse/spi-amlogic-spifc-a1-Handle-devm_pm_runtime_enable-e.patch
+	patches.suse/spi-nxp-fspi-Propagate-fwnode-in-ACPI-case-as-well.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
