--- a/series.conf
+++ b/series.conf
@@ -13546,6 +13546,7 @@
 	patches.suse/serial-amba-pl011-prefer-dma_mapping_error-over-expl.patch
 	patches.suse/slimbus-ngd-Fix-reference-count-leak-in-qcom_slim_ng.patch
 	patches.suse/most-usb-fix-double-free-on-late-probe-failure.patch
+	patches.suse/iio-adc-rtq6056-Correct-the-sign-bit-index.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
