iio:common:ssp_sensors: Fix an error handling path ssp_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13549,6 +13549,7 @@
 	patches.suse/iio-adc-rtq6056-Correct-the-sign-bit-index.patch
 	patches.suse/iio-adc-stm32-dfsdm-fix-st-adc-alt-channel-property-.patch
 	patches.suse/iio-adc-ad7280a-fix-ad7280_store_balance_timer.patch
+	patches.suse/iio-common-ssp_sensors-Fix-an-error-handling-path-ss.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
