regulator: rtq2208: Correct buck group2 phase mapping logic (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13556,6 +13556,7 @@
 	patches.suse/iio-humditiy-hdc3020-fix-units-for-thresholds-and-hy.patch
 	patches.suse/iio-st_lsm6dsx-Fixed-calibrated-timestamp-calculatio.patch
 	patches.suse/firmware-stratix10-svc-fix-bug-in-saving-controller-.patch
+	patches.suse/regulator-rtq2208-Correct-buck-group2-phase-mapping-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
