config.conf: add kernel-azure as additonal flavor

--- a/config.conf
+++ b/config.conf
@@ -8,6 +8,7 @@
 #            kernel-binary and kernel-source rely on this
 #
 
++x86_64		x86_64/azure
 +x86_64		x86_64/default
 +x86_64 -syms	x86_64/kvmsmall
 +x86_64		x86_64/rt
@@ -15,6 +16,7 @@
 +ppc64le	ppc64le/default
 +ppc64le -syms	ppc64le/kvmsmall
 
++arm64		arm64/azure
 +arm64		arm64/default
 +arm64		arm64/64kb
 +arm64 -syms	arm64/kvmsmall
