cramfs: Verify inode mode when loading from disk (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12462,6 +12462,7 @@
 	patches.suse/x86-topology-Implement-topology_is_core_online-to-address-.patch
 	patches.suse/fs-proc-task_mmu-check-p-vec_buf-for-NULL.patch
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
+	patches.suse/cramfs-Verify-inode-mode-when-loading-from-disk.patch
 	patches.suse/listmount-don-t-call-path_put-under-namespace-semaph.patch
 	patches.suse/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
 	patches.suse/writeback-Avoid-softlockup-when-switching-many-inode.patch
