--- a/series.conf
+++ b/series.conf
@@ -13264,6 +13264,7 @@
 	patches.suse/nvme-tcp-handle-tls-partially-sent-records-in-write_.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 	patches.suse/KVM-arm64-Prevent-access-to-vCPU-events-before-init.patch
+	patches.suse/exfat-fix-improper-check-of-dentry.stream.valid_size.patch
 	patches.suse/HID-quirks-avoid-Cooler-Master-MM712-dongle-wakeup-b.patch
 	patches.suse/HID-quirks-Add-ALWAYS_POLL-quirk-for-VRS-R295-steeri.patch
 	patches.suse/HID-nintendo-Wait-longer-for-initial-probe.patch
