--- a/series.conf
+++ b/series.conf
@@ -13266,6 +13266,7 @@
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 	patches.suse/KVM-arm64-Prevent-access-to-vCPU-events-before-init.patch
 	patches.suse/NFS-check-if-suid-sgid-was-cleared-after-a-write-as-needed.patch
+	patches.suse/NFS4-Fix-state-renewals-missing-after-boot.patch
 	patches.suse/exfat-fix-improper-check-of-dentry.stream.valid_size.patch
 	patches.suse/HID-quirks-avoid-Cooler-Master-MM712-dongle-wakeup-b.patch
 	patches.suse/HID-quirks-Add-ALWAYS_POLL-quirk-for-VRS-R295-steeri.patch
