mptcp: Initialise rcv_mss before calling tcp_send_active_reset() in mptcp_do_fastclose() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12418,6 +12418,7 @@
 	patches.kernel.org/6.12.60-111-drm-amd-display-Prevent-Gating-DTBCLK-before-.patch
 	patches.kernel.org/6.12.60-112-Revert-gpio-swnode-don-t-use-the-swnode-s-nam.patch
 	patches.kernel.org/6.12.60-113-Linux-6.12.60.patch
+	patches.kernel.org/mptcp-Initialise-rcv_mss-before-calling-tcp_send_active_re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
