--- a/series.conf
+++ b/series.conf
@@ -35192,6 +35192,7 @@
 	patches.suse/drm-etnaviv-fix-flush-sequence-logic.patch
 	patches.suse/drm-panel-sitronix-st7789v-fix-sync-flags-for-t28cp4.patch
 	patches.suse/drm-panel-kingdisplay-kd097d04-Disable-EoTp.patch
+	patches.suse/kconfig-mconf-Initialize-the-default-locale-at-start.patch
 	patches.suse/x86-CPU-AMD-Add-RDSEED-fix-for-Zen5.patch
 	patches.suse/regmap-slimbus-fix-bus_context-pointer-in-regmap-ini.patch
 	patches.suse/regulator-bd718x7-Fix-voltages-scaled-by-resistor-di.patch
