--- a/series.conf
+++ b/series.conf
@@ -11570,6 +11570,7 @@
 	patches.suse/watchdog-advantech_ec_wdt-fix-Kconfig-dependencies.patch
 	patches.suse/watchdog-intel-mid_wdt-add-MODULE_ALIAS-to-allow-aut.patch
 	patches.suse/Input-i8042-add-quirk-for-TUXEDO-Gemini-17-Gen1-Clev.patch
+	patches.suse/Input-goodix-add-support-for-ACPI-ID-GDX9110.patch
 	patches.suse/Input-xpad-fix-support-for-some-third-party-controll.patch
 	patches.suse/Input-xpad-add-GameSir-VID-for-Xbox-One-controllers.patch
 	patches.suse/Input-xpad-add-GameSir-T4-Kaleid-Controller-support.patch
