--- a/series.conf
+++ b/series.conf
@@ -35277,6 +35277,7 @@
 	patches.suse/pinctrl-s32cc-fix-uninitialized-memory-in-s32_pinctr.patch
 	patches.suse/pinctrl-s32cc-initialize-gpio_pin_config-list-after-.patch
 	patches.suse/nvme-multipath-fix-lockdep-WARN-due-to-partition-sca.patch
+	patches.suse/Input-goodix-add-support-for-ACPI-ID-GDIX1003.patch
 	patches.suse/Input-pegasus-notetaker-fix-potential-out-of-bounds-.patch
 	patches.suse/Input-imx_sc_key-fix-memory-corruption-on-unload.patch
 	patches.suse/ALSA-usb-audio-fix-uac2-clock-source-at-terminal-par.patch
