--- a/series.conf
+++ b/series.conf
@@ -35272,6 +35272,7 @@
 	patches.suse/Revert-drm-tegra-dsi-Clear-enable-register-if-powere.patch
 	patches.suse/nouveau-firmware-Add-missing-kfree-of-nvkm_falcon_fw.patch
 	patches.suse/drm-amd-display-Move-sleep-into-each-retry-for-retri.patch
+	patches.suse/drm-amd-display-Increase-DPCD-read-retries.patch
 	patches.suse/pinctrl-s32cc-fix-uninitialized-memory-in-s32_pinctr.patch
 	patches.suse/pinctrl-s32cc-initialize-gpio_pin_config-list-after-.patch
 	patches.suse/nvme-multipath-fix-lockdep-WARN-due-to-partition-sca.patch
