--- a/series.conf
+++ b/series.conf
@@ -56620,6 +56620,7 @@
 	patches.suse/drm-amd-display-Fix-black-screen-with-HDMI-outputs.patch
 	patches.suse/drm-amdgpu-smu-Handle-S0ix-for-vangogh.patch
 	patches.suse/drm-amd-display-Fix-NULL-deref-in-debugfs-odm_combin.patch
+	patches.suse/drm-amdgpu-fix-gpu-page-fault-after-hibernation-on-P.patch
 	patches.suse/drm-amd-Fix-suspend-failure-with-secure-display-TA.patch
 	patches.suse/drm-amd-display-Enable-mst-when-it-s-detected-but-ye.patch
 	patches.suse/drm-mediatek-Disable-AFBC-support-on-Mediatek-DRM-dr.patch
