--- a/series.conf
+++ b/series.conf
@@ -56683,6 +56683,7 @@
 	patches.suse/drm-tegra-Add-call-to-put_pid.patch
 	patches.suse/Revert-drm-tegra-dsi-Clear-enable-register-if-powere.patch
 	patches.suse/nouveau-firmware-Add-missing-kfree-of-nvkm_falcon_fw.patch
+	patches.suse/drm-amd-display-Clear-the-CUR_ENABLE-register-on-DCN-5bab4c8.patch
 	patches.suse/drm-xe-Remove-duplicate-DRM_EXEC-selection-from-Kcon.patch
 	patches.suse/pinctrl-s32cc-fix-uninitialized-memory-in-s32_pinctr.patch
 	patches.suse/pinctrl-s32cc-initialize-gpio_pin_config-list-after-.patch
