drm/amd: Skip power ungate during suspend for VPE (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56686,6 +56686,7 @@
 	patches.suse/drm-amd-display-Clear-the-CUR_ENABLE-register-on-DCN-5bab4c8.patch
 	patches.suse/drm-amd-display-Fix-pbn-to-kbps-Conversion.patch
 	patches.suse/drm-radeon-delete-radeon_fence_process-in-is_signale.patch
+	patches.suse/drm-amd-Skip-power-ungate-during-suspend-for-VPE.patch
 	patches.suse/drm-xe-Remove-duplicate-DRM_EXEC-selection-from-Kcon.patch
 	patches.suse/pinctrl-s32cc-fix-uninitialized-memory-in-s32_pinctr.patch
 	patches.suse/pinctrl-s32cc-initialize-gpio_pin_config-list-after-.patch
