--- a/series.conf
+++ b/series.conf
@@ -56141,6 +56141,7 @@
 	patches.suse/drm-amd-display-Add-AVI-infoframe-copy-in-copy_strea.patch
 	patches.suse/drm-amd-display-Init-dispclk-from-bootup-clock-for-D.patch
 	patches.suse/drm-amd-display-Fix-for-test-crash-due-to-power-gati.patch
+	patches.suse/drm-amd-display-Insert-dccg-log-for-easy-debug.patch
 	patches.suse/drm-amd-display-update-color-on-atomic-commit-time.patch
 	patches.suse/drm-amd-display-change-dc-stream-color-settings-only.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
