--- a/series.conf
+++ b/series.conf
@@ -56689,6 +56689,7 @@
 	patches.suse/drm-amd-display-Fix-pbn-to-kbps-Conversion.patch
 	patches.suse/drm-radeon-delete-radeon_fence_process-in-is_signale.patch
 	patches.suse/drm-amd-Skip-power-ungate-during-suspend-for-VPE.patch
+	patches.suse/drm-xe-Prevent-BIT-overflow-when-handling-invalid-pr.patch
 	patches.suse/drm-xe-Remove-duplicate-DRM_EXEC-selection-from-Kcon.patch
 	patches.suse/pinctrl-s32cc-fix-uninitialized-memory-in-s32_pinctr.patch
 	patches.suse/pinctrl-s32cc-initialize-gpio_pin_config-list-after-.patch
