drm/amd/display: Prevent Gating DTBCLK before It Is Properly Latched (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56685,6 +56685,7 @@
 	patches.suse/drm-tegra-Add-call-to-put_pid.patch
 	patches.suse/Revert-drm-tegra-dsi-Clear-enable-register-if-powere.patch
 	patches.suse/nouveau-firmware-Add-missing-kfree-of-nvkm_falcon_fw.patch
+	patches.suse/drm-amd-display-Prevent-Gating-DTBCLK-before-It-Is-P.patch
 	patches.suse/drm-amd-display-Clear-the-CUR_ENABLE-register-on-DCN-5bab4c8.patch
 	patches.suse/drm-amd-display-Fix-pbn-to-kbps-Conversion.patch
 	patches.suse/drm-radeon-delete-radeon_fence_process-in-is_signale.patch
