--- a/series.conf
+++ b/series.conf
@@ -13539,6 +13539,7 @@
 	patches.suse/pinctrl-s32cc-initialize-gpio_pin_config-list-after-.patch
 	patches.suse/ata-libata-scsi-Add-missing-scsi_device_put-in-ata_s.patch
 	patches.suse/nvmet-auth-update-sc_c-in-target-host-hash-calculati.patch
+	patches.suse/Input-goodix-add-support-for-ACPI-ID-GDIX1003.patch
 	patches.suse/Input-pegasus-notetaker-fix-potential-out-of-bounds-.patch
 	patches.suse/Input-imx_sc_key-fix-memory-corruption-on-unload.patch
 	patches.suse/ALSA-usb-audio-fix-uac2-clock-source-at-terminal-par.patch
