drm/i915/dp_mst: Disable Panel Replay (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13498,6 +13498,7 @@
 	patches.suse/drm-amd-display-Allow-VRR-params-change-if-unsynced-.patch
 	patches.suse/drm-amdkfd-relax-checks-for-over-allocation-of-save-.patch
 	patches.suse/drm-vmwgfx-Validate-command-header-size-against-SVGA.patch
+	patches.suse/drm-i915-dp_mst-Disable-Panel-Replay.patch
 	patches.suse/pnfs-Fix-TLS-logic-in-_nfs4_pnfs_v4_ds_connect.patch
 	patches.suse/pnfs-Set-transport-security-policy-to-RPC_XPRTSEC_NONE-unless-using-TLS.patch
 	patches.suse/NFS-sysfs-fix-leak-when-nfs_client-kobject-add-fails.patch
