--- a/series.conf
+++ b/series.conf
@@ -13526,6 +13526,7 @@
 	patches.suse/drm-amd-display-Prevent-Gating-DTBCLK-before-It-Is-P.patch
 	patches.suse/drm-amd-display-Move-sleep-into-each-retry-for-retri.patch
 	patches.suse/drm-amd-display-Increase-DPCD-read-retries.patch
+	patches.suse/drm-amd-display-Clear-the-CUR_ENABLE-register-on-DCN-5bab4c8.patch
 	patches.suse/drm-xe-Remove-duplicate-DRM_EXEC-selection-from-Kcon.patch
 	patches.suse/pinctrl-realtek-Select-REGMAP_MMIO-for-RTD-driver.patch
 	patches.suse/pinctrl-cirrus-Fix-fwnode-leak-in-cs42l43_pin_probe.patch
