--- a/series.conf
+++ b/series.conf
@@ -13531,6 +13531,7 @@
 	patches.suse/drm-radeon-delete-radeon_fence_process-in-is_signale.patch
 	patches.suse/drm-amd-Skip-power-ungate-during-suspend-for-VPE.patch
 	patches.suse/drm-amdgpu-Skip-emit-de-meta-data-on-gfx11-with-rs64.patch
+	patches.suse/drm-xe-Prevent-BIT-overflow-when-handling-invalid-pr.patch
 	patches.suse/drm-xe-Remove-duplicate-DRM_EXEC-selection-from-Kcon.patch
 	patches.suse/pinctrl-realtek-Select-REGMAP_MMIO-for-RTD-driver.patch
 	patches.suse/pinctrl-cirrus-Fix-fwnode-leak-in-cs42l43_pin_probe.patch
