drm/amd/display: Increase DPCD read retries (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13525,6 +13525,7 @@
 	patches.suse/nouveau-firmware-Add-missing-kfree-of-nvkm_falcon_fw.patch
 	patches.suse/drm-amd-display-Prevent-Gating-DTBCLK-before-It-Is-P.patch
 	patches.suse/drm-amd-display-Move-sleep-into-each-retry-for-retri.patch
+	patches.suse/drm-amd-display-Increase-DPCD-read-retries.patch
 	patches.suse/drm-xe-Remove-duplicate-DRM_EXEC-selection-from-Kcon.patch
 	patches.suse/pinctrl-realtek-Select-REGMAP_MMIO-for-RTD-driver.patch
 	patches.suse/pinctrl-cirrus-Fix-fwnode-leak-in-cs42l43_pin_probe.patch
