--- a/series.conf
+++ b/series.conf
@@ -4203,6 +4203,7 @@
 	patches.suse/drm-amdgpu-tear-down-ttm-range-manager-for-doorbell-.patch
 	patches.suse/drm-amdgpu-fix-gpu-recovery-disable-with-per-queue-r.patch
 	patches.suse/drm-amd-display-Limit-Scaling-Ratio-on-DCN3.01.patch
+	patches.suse/drm-amd-display-avoid-reset-DTBCLK-at-clock-init.patch
 	patches.suse/drm-msm-dp-set-safe_to_exit_level-before-printing-it.patch
 	patches.suse/drm-msm-hdmi-simplify-code-in-pll_get_integloop_gain.patch
 	patches.suse/drm-msm-dpu-fix-x1e80100-intf_6-underrun-vsync-inter.patch
