--- a/series.conf
+++ b/series.conf
@@ -193,6 +193,7 @@
 	# Wireless networking drivers
 	########################################################
 	patches.suse/b43-missing-firmware-info.patch
+	patches.suse/iwlwifi-declare-missing-firmware-files.patch
 
 	########################################################
 	# USB
