--- a/series.conf
+++ b/series.conf
@@ -35319,6 +35319,7 @@
 	patches.suse/spi-amlogic-spifc-a1-Handle-devm_pm_runtime_enable-e.patch
 	patches.suse/efi-libstub-Fix-page-table-access-in-5-level-to-4-le.patch
 	patches.suse/ACPI-processor_core-fix-map_x2apic_id-for-amd-pstate.patch
+	patches.suse/ACPI-property-Fix-fwnode-refcount-leak-in-acpi_fwnod.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
