--- a/series.conf
+++ b/series.conf
@@ -35318,6 +35318,7 @@
 	patches.suse/spi-bcm63xx-fix-premature-CS-deassertion-on-RX-only-.patch
 	patches.suse/spi-amlogic-spifc-a1-Handle-devm_pm_runtime_enable-e.patch
 	patches.suse/efi-libstub-Fix-page-table-access-in-5-level-to-4-le.patch
+	patches.suse/ACPI-processor_core-fix-map_x2apic_id-for-amd-pstate.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
