--- a/series.conf
+++ b/series.conf
@@ -35317,6 +35317,7 @@
 	patches.suse/firmware-stratix10-svc-fix-bug-in-saving-controller-.patch
 	patches.suse/spi-bcm63xx-fix-premature-CS-deassertion-on-RX-only-.patch
 	patches.suse/spi-amlogic-spifc-a1-Handle-devm_pm_runtime_enable-e.patch
+	patches.suse/efi-libstub-Fix-page-table-access-in-5-level-to-4-le.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
