media: s5p-mfc: Fix potential deadlock on condlock (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -19959,6 +19959,7 @@
 	patches.suse/media-cobalt-Use-FIELD_GET-to-extract-Link-Width.patch
 	patches.suse/media-s3c-camif-Avoid-inappropriate-kfree.patch
 	patches.suse/media-v4l2-event-Annotate-struct-v4l2_subscribed_eve.patch
+	patches.suse/media-s5p-mfc-Fix-potential-deadlock-on-condlock.patch
 	patches.suse/media-vidtv-psi-Add-check-for-kstrdup.patch
 	patches.suse/media-vidtv-mux-Add-check-and-kfree-for-kstrdup.patch
 	patches.suse/media-cedrus-Fix-clock-reset-sequence.patch
