media: nxp: imx8-isi: Mark all crossbar sink pads as MUST_CONNECT (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32108,6 +32108,7 @@
 	patches.suse/media-mc-Add-num_links-flag-to-media_pad.patch
 	patches.suse/media-mc-Rename-pad-variable-to-clarify-intent.patch
 	patches.suse/media-mc-Expand-MUST_CONNECT-flag-to-always-require-.patch
+	patches.suse/media-nxp-imx8-isi-Mark-all-crossbar-sink-pads-as-MU.patch
 	patches.suse/media-drivers-media-dvb-core-copy-user-arrays-safely.patch
 	patches.suse/media-edia-dvbdev-fix-a-use-after-free.patch
 	patches.suse/media-cedrus-h265-Fix-configuring-bitstream-size.patch
