efi: stmm: Fix incorrect buffer allocation method (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55696,6 +55696,7 @@
 	patches.suse/HID-quirks-add-support-for-Legion-Go-dual-dinput-mod.patch
 	patches.suse/xfs-do-not-propagate-ENODATA-disk-errors-into-xattr-code.patch
 	patches.suse/fs-smb-Fix-inconsistent-refcnt-update.patch
+	patches.suse/efi-stmm-Fix-incorrect-buffer-allocation-method.patch
 	patches.suse/KVM-x86-use-array_index_nospec-with-indices-that-com.patch
 	patches.suse/x86-microcode-AMD-Handle-the-case-of-no-BIOS-microcode.patch
 	patches.suse/btrfs-abort-transaction-on-failure-to-add-link-to-in.patch
