media: qcom: camss: Fix ordering of pm_runtime_enable (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -47350,6 +47350,7 @@
 	patches.suse/drivers-media-dvb-frontends-rtl2830-fix-an-out-of-bo.patch
 	patches.suse/Revert-media-tuners-fix-error-return-code-of-hybrid_.patch
 	patches.suse/media-qcom-camss-Remove-use_count-guard-in-stop_stre.patch
+	patches.suse/media-qcom-camss-Fix-ordering-of-pm_runtime_enable.patch
 	patches.suse/media-videobuf2-core-clear-memory-related-fields-in-.patch
 	patches.suse/media-videobuf2-core-release-all-planes-first-in-__p.patch
 	patches.suse/media-videobuf2-core-reverse-the-iteration-order-in-.patch
