--- a/series.conf
+++ b/series.conf
@@ -19892,6 +19892,7 @@
 	patches.suse/rtc-efi-fixed-typo-in-efi_procfs.patch
 	patches.suse/media-qcom-camss-Fix-pm_domain_on-sequence-in-probe.patch
 	patches.suse/media-qcom-camss-Fix-V4L2-async-notifier-error-path.patch
+	patches.suse/media-qcom-camss-Fix-genpd-cleanup.patch
 	patches.suse/media-qcom-camss-Fix-vfe_get-error-jump.patch
 	patches.suse/media-qcom-camss-Fix-VFE-17x-vfe_disable_output.patch
 	patches.suse/media-qcom-camss-Fix-VFE-480-vfe_disable_output.patch
