media: imx-mipi-csis: Drop extra clock enable at probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26145,6 +26145,7 @@
 	patches.suse/media-uvcvideo-Fix-power-line-control-for-a-Chicony-.patch
 	patches.suse/media-uvcvideo-Fix-power-line-control-for-SunplusIT-.patch
 	patches.suse/media-imx-mipi-csis-Fix-clock-handling-in-remove.patch
+	patches.suse/media-imx-mipi-csis-Drop-extra-clock-enable-at-probe.patch
 	patches.suse/media-dt-bindings-media-rkisp1-Fix-the-port-descript.patch
 	patches.suse/media-rkisp1-Fix-media-device-memory-leak.patch
 	patches.suse/media-rkisp1-Fix-memory-leaks-in-rkisp1_isp_unregist.patch
