media: radio-isa: use dev_name to fill in bus_info (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -19951,6 +19951,7 @@
 	patches.suse/media-microchip-don-t-set-bus_info.patch
 	patches.suse/media-am437x-don-t-fill-in-bus_info.patch
 	patches.suse/media-atmel-drop-bus_info.patch
+	patches.suse/media-radio-isa-use-dev_name-to-fill-in-bus_info.patch
 	patches.suse/media-verisilicon-replace-snprintf-with-strscpy-strl.patch
 	patches.suse/media-qcom-camss-Comment-CSID-dt_id-field.patch
 	patches.suse/media-amphion-handle-firmware-debug-message.patch
