--- a/series.conf
+++ b/series.conf
@@ -19909,6 +19909,7 @@
 	patches.suse/media-cx231xx-Switch-to-use-kmemdup-helper.patch
 	patches.suse/media-cx231xx-Add-EP5_BUF_SIZE-and-EP5_TIMEOUT_MS-ma.patch
 	patches.suse/media-ov13b10-Fix-some-error-checking-in-probe.patch
+	patches.suse/media-ov5640-fix-vblank-unchange-issue-when-work-at-.patch
 	patches.suse/media-ivsc-Improve-Kconfig-help-text.patch
 	patches.suse/media-ivsc-csi-remove-name-identifier.patch
 	patches.suse/media-ivsc-ace-remove-name-identifier.patch
