--- a/series.conf
+++ b/series.conf
@@ -55323,6 +55323,7 @@
 	patches.suse/media-venus-Add-a-check-for-packet-size-after-readin.patch
 	patches.suse/media-venus-Fix-OOB-read-due-to-missing-payload-boun.patch
 	patches.suse/media-venus-hfi-explicitly-release-IRQ-during-teardo.patch
+	patches.suse/media-qcom-camss-cleanup-media-device-allocated-reso.patch
 	patches.suse/media-vivid-fix-wrong-pixel_array-control-size.patch
 	patches.suse/media-ipu6-isys-Use-correct-pads-for-xlate_streams.patch
 	patches.suse/media-hi556-correct-the-test-pattern-configuration.patch
