efi/libstub: Avoid physical address 0x0 when doing random allocation (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52127,6 +52127,7 @@
 	patches.suse/mm-fix-error-handling-in-__filemap_get_folio-with-FG.patch
 	patches.suse/mm-page_alloc-fix-memory-accept-before-watermarks-gets-initialized.patch
 	patches.suse/hwmon-nct6775-core-Fix-out-of-bounds-access-for-NCT6.patch
+	patches.suse/efi-libstub-Avoid-physical-address-0x0-when-doing-ra.patch
 	patches.suse/mmc-atmel-mci-Add-missing-clk_disable_unprepare.patch
 	patches.suse/mmc-sdhci-brcmstb-add-cqhci-suspend-resume-to-PM-ops.patch
 	patches.suse/RDMA-rxe-Fix-the-failure-of-ibv_query_device-and-ibv.patch
