--- a/series.conf
+++ b/series.conf
@@ -56160,6 +56160,7 @@
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
 	patches.suse/drm-amd-display-Reject-modes-with-too-high-pixel-clo.patch
 	patches.suse/amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_device_fi.patch
+	patches.suse/media-pci-ivtv-Don-t-create-fake-v4l2_fh.patch
 	patches.suse/media-amphion-Delete-v4l2_fh-synchronously-in-.relea.patch
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
 	patches.suse/media-i2c-Kconfig-Ensure-a-dependency-on-HAVE_CLK-fo.patch
