media: qcom: venus: fix incorrect return value (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -20023,6 +20023,7 @@
 	patches.suse/media-rkisp1-resizer-Drop-unneeded-local-variable.patch
 	patches.suse/media-rkisp1-resizer-Improve-debug-message-when-conf.patch
 	patches.suse/media-rkisp1-resizer-Fix-resizer-disable-check-when-.patch
+	patches.suse/media-qcom-venus-fix-incorrect-return-value.patch
 	patches.suse/media-dvb-usb-v2-af9035-fix-missing-unlock.patch
 	patches.suse/media-videobuf2-Fix-IS_ERR-checking-in-vb2_vmalloc_p.patch
 	patches.suse/media-verisilicon-Fixes-clock-list-for-rk3588-av1-de.patch
