media: uvcvideo: Force UVC version to 1.0a for 0408:4033 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -48985,6 +48985,7 @@
 	patches.suse/media-v4l-Add-luma-16-bit-interlaced-pixel-format.patch
 	patches.suse/media-uvcvideo-RealSense-D421-Depth-module-metadata.patch
 	patches.suse/media-uvcvideo-Add-a-quirk-for-the-Kaiweets-KTI-W02-.patch
+	patches.suse/media-uvcvideo-Force-UVC-version-to-1.0a-for-0408-40-c9df993.patch
 	patches.suse/media-v4l2-core-add-v4l2_debugfs_root.patch
 	patches.suse/media-v4l2-core-add-v4l2_debugfs_if_alloc-free.patch
 	patches.suse/media-vb2-vb2_core_queue_init-sanity-check-lock-and-.patch
