ACPI: property: Fix fwnode refcount leak in acpi_fwnode_graph_parse_endpoint() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13596,6 +13596,7 @@
 	patches.suse/spi-nxp-fspi-Propagate-fwnode-in-ACPI-case-as-well.patch
 	patches.suse/efi-libstub-Fix-page-table-access-in-5-level-to-4-le.patch
 	patches.suse/ACPI-processor_core-fix-map_x2apic_id-for-amd-pstate.patch
+	patches.suse/ACPI-property-Fix-fwnode-refcount-leak-in-acpi_fwnod.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
