--- a/series.conf
+++ b/series.conf
@@ -13594,6 +13594,7 @@
 	patches.suse/spi-bcm63xx-fix-premature-CS-deassertion-on-RX-only-.patch
 	patches.suse/spi-amlogic-spifc-a1-Handle-devm_pm_runtime_enable-e.patch
 	patches.suse/spi-nxp-fspi-Propagate-fwnode-in-ACPI-case-as-well.patch
+	patches.suse/efi-libstub-Fix-page-table-access-in-5-level-to-4-le.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
