ACPI: processor_core: fix map_x2apic_id for amd-pstate on am4 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13595,6 +13595,7 @@
 	patches.suse/spi-amlogic-spifc-a1-Handle-devm_pm_runtime_enable-e.patch
 	patches.suse/spi-nxp-fspi-Propagate-fwnode-in-ACPI-case-as-well.patch
 	patches.suse/efi-libstub-Fix-page-table-access-in-5-level-to-4-le.patch
+	patches.suse/ACPI-processor_core-fix-map_x2apic_id-for-amd-pstate.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
