--- a/series.conf
+++ b/series.conf
@@ -35325,6 +35325,7 @@
 	patches.suse/ima-Handle-error-code-returned-by-ima_filter_rule_ma.patch
 	patches.suse/crypto-authenc-Correctly-pass-EINPROGRESS-back-up-to.patch
 	patches.suse/crypto-asymmetric_keys-prevent-overflow-in-asymmetri.patch
+	patches.suse/crypto-hisilicon-qm-restore-original-qos-values.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
