--- a/series.conf
+++ b/series.conf
@@ -35324,6 +35324,7 @@
 	patches.suse/KEYS-trusted-Fix-a-memory-leak-in-tpm2_load_cmd.patch
 	patches.suse/ima-Handle-error-code-returned-by-ima_filter_rule_ma.patch
 	patches.suse/crypto-authenc-Correctly-pass-EINPROGRESS-back-up-to.patch
+	patches.suse/crypto-asymmetric_keys-prevent-overflow-in-asymmetri.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
