wifi: mac80211: fix CMAC functions not handling errors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35337,6 +35337,7 @@
 	patches.suse/wifi-ath11k-fix-peer-HE-MCS-assignment.patch
 	patches.suse/wifi-cw1200-Fix-potential-memory-leak-in-cw1200_bh_r.patch
 	patches.suse/net-phy-adin1100-Fix-software-power-down-ready-condi.patch
+	patches.suse/wifi-mac80211-fix-CMAC-functions-not-handling-errors.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
