--- a/series.conf
+++ b/series.conf
@@ -35323,6 +35323,7 @@
 	patches.suse/ACPI-property-Fix-fwnode-refcount-leak-in-acpi_fwnod.patch
 	patches.suse/KEYS-trusted-Fix-a-memory-leak-in-tpm2_load_cmd.patch
 	patches.suse/ima-Handle-error-code-returned-by-ima_filter_rule_ma.patch
+	patches.suse/crypto-authenc-Correctly-pass-EINPROGRESS-back-up-to.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
