--- a/series.conf
+++ b/series.conf
@@ -35334,6 +35334,7 @@
 	patches.suse/Documentation-kernel-parameters-fix-typo-in-retbleed.patch
 	patches.suse/lib-vsprintf-Check-pointer-before-dereferencing-in-t.patch
 	patches.suse/wifi-ath11k-restore-register-window-after-global-res.patch
+	patches.suse/wifi-ath11k-fix-peer-HE-MCS-assignment.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
