--- a/series.conf
+++ b/series.conf
@@ -35336,6 +35336,7 @@
 	patches.suse/wifi-ath11k-restore-register-window-after-global-res.patch
 	patches.suse/wifi-ath11k-fix-peer-HE-MCS-assignment.patch
 	patches.suse/wifi-cw1200-Fix-potential-memory-leak-in-cw1200_bh_r.patch
+	patches.suse/net-phy-adin1100-Fix-software-power-down-ready-condi.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
