crypto: iaa - Fix incorrect return value in save_iaa_wq() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35327,6 +35327,7 @@
 	patches.suse/crypto-asymmetric_keys-prevent-overflow-in-asymmetri.patch
 	patches.suse/crypto-hisilicon-qm-restore-original-qos-values.patch
 	patches.suse/crypto-rockchip-drop-redundant-crypto_skcipher_ivsiz.patch
+	patches.suse/crypto-iaa-Fix-incorrect-return-value-in-save_iaa_wq.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
