--- a/series.conf
+++ b/series.conf
@@ -35342,6 +35342,7 @@
 	patches.suse/wifi-rtl818x-rtl8187-Fix-potential-buffer-underflow-.patch
 	patches.suse/wifi-mt76-Fix-DTS-power-limits-on-little-endian-syst.patch
 	patches.suse/mt76-mt7615-Fix-memory-leak-in-mt7615_mcu_wtbl_sta_a.patch
+	patches.suse/wifi-ieee80211-correct-FILS-status-codes.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
