--- a/series.conf
+++ b/series.conf
@@ -35343,6 +35343,7 @@
 	patches.suse/wifi-mt76-Fix-DTS-power-limits-on-little-endian-syst.patch
 	patches.suse/mt76-mt7615-Fix-memory-leak-in-mt7615_mcu_wtbl_sta_a.patch
 	patches.suse/wifi-ieee80211-correct-FILS-status-codes.patch
+	patches.suse/wifi-nl80211-vendor-cmd-intel-fix-a-blank-kernel-doc.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
