--- a/series.conf
+++ b/series.conf
@@ -35333,6 +35333,7 @@
 	patches.suse/Documentation-parport-lowlevel-Separate-function-lis.patch
 	patches.suse/Documentation-kernel-parameters-fix-typo-in-retbleed.patch
 	patches.suse/lib-vsprintf-Check-pointer-before-dereferencing-in-t.patch
+	patches.suse/wifi-ath11k-restore-register-window-after-global-res.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
