wifi: cw1200: Fix potential memory leak in cw1200_bh_rx_helper() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35335,6 +35335,7 @@
 	patches.suse/lib-vsprintf-Check-pointer-before-dereferencing-in-t.patch
 	patches.suse/wifi-ath11k-restore-register-window-after-global-res.patch
 	patches.suse/wifi-ath11k-fix-peer-HE-MCS-assignment.patch
+	patches.suse/wifi-cw1200-Fix-potential-memory-leak-in-cw1200_bh_r.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
