Documentation/kernel-parameters: fix typo in retbleed= kernel parameter description (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35331,6 +35331,7 @@
 	patches.suse/crypto-ccree-Correctly-handle-return-of-sg_nents_for.patch
 	patches.suse/docs-w1-fix-w1-netlink-invalid-URL.patch
 	patches.suse/Documentation-parport-lowlevel-Separate-function-lis.patch
+	patches.suse/Documentation-kernel-parameters-fix-typo-in-retbleed.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
