--- a/series.conf
+++ b/series.conf
@@ -35339,6 +35339,7 @@
 	patches.suse/net-phy-adin1100-Fix-software-power-down-ready-condi.patch
 	patches.suse/wifi-mac80211-fix-CMAC-functions-not-handling-errors.patch
 	patches.suse/wifi-rtl818x-Fix-potential-memory-leaks-in-rtl8180_i.patch
+	patches.suse/wifi-rtl818x-rtl8187-Fix-potential-buffer-underflow-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
