--- a/series.conf
+++ b/series.conf
@@ -35340,6 +35340,7 @@
 	patches.suse/wifi-mac80211-fix-CMAC-functions-not-handling-errors.patch
 	patches.suse/wifi-rtl818x-Fix-potential-memory-leaks-in-rtl8180_i.patch
 	patches.suse/wifi-rtl818x-rtl8187-Fix-potential-buffer-underflow-.patch
+	patches.suse/wifi-mt76-Fix-DTS-power-limits-on-little-endian-syst.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
