--- a/series.conf
+++ b/series.conf
@@ -35326,6 +35326,7 @@
 	patches.suse/crypto-authenc-Correctly-pass-EINPROGRESS-back-up-to.patch
 	patches.suse/crypto-asymmetric_keys-prevent-overflow-in-asymmetri.patch
 	patches.suse/crypto-hisilicon-qm-restore-original-qos-values.patch
+	patches.suse/crypto-rockchip-drop-redundant-crypto_skcipher_ivsiz.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
