--- a/series.conf
+++ b/series.conf
@@ -35322,6 +35322,7 @@
 	patches.suse/ACPI-processor_core-fix-map_x2apic_id-for-amd-pstate.patch
 	patches.suse/ACPI-property-Fix-fwnode-refcount-leak-in-acpi_fwnod.patch
 	patches.suse/KEYS-trusted-Fix-a-memory-leak-in-tpm2_load_cmd.patch
+	patches.suse/ima-Handle-error-code-returned-by-ima_filter_rule_ma.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
