--- a/series.conf
+++ b/series.conf
@@ -35328,6 +35328,7 @@
 	patches.suse/crypto-hisilicon-qm-restore-original-qos-values.patch
 	patches.suse/crypto-rockchip-drop-redundant-crypto_skcipher_ivsiz.patch
 	patches.suse/crypto-iaa-Fix-incorrect-return-value-in-save_iaa_wq.patch
+	patches.suse/crypto-ccree-Correctly-handle-return-of-sg_nents_for.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
