--- a/series.conf
+++ b/series.conf
@@ -35329,6 +35329,7 @@
 	patches.suse/crypto-rockchip-drop-redundant-crypto_skcipher_ivsiz.patch
 	patches.suse/crypto-iaa-Fix-incorrect-return-value-in-save_iaa_wq.patch
 	patches.suse/crypto-ccree-Correctly-handle-return-of-sg_nents_for.patch
+	patches.suse/docs-w1-fix-w1-netlink-invalid-URL.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
