--- a/series.conf
+++ b/series.conf
@@ -56762,6 +56762,7 @@
 	patches.suse/efi-libstub-Fix-page-table-access-in-5-level-to-4-le.patch
 	patches.suse/ACPI-processor_core-fix-map_x2apic_id-for-amd-pstate.patch
 	patches.suse/ACPI-property-Fix-fwnode-refcount-leak-in-acpi_fwnod.patch
+	patches.suse/wifi-ath12k-fix-potential-memory-leak-in-ath12k_wow_.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
