crypto: hisilicon/qm - restore original qos values (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13603,6 +13603,7 @@
 	patches.suse/crypto-af_alg-zero-initialize-memory-allocated-via-s.patch
 	patches.suse/crypto-authenc-Correctly-pass-EINPROGRESS-back-up-to.patch
 	patches.suse/crypto-asymmetric_keys-prevent-overflow-in-asymmetri.patch
+	patches.suse/crypto-hisilicon-qm-restore-original-qos-values.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
