--- a/series.conf
+++ b/series.conf
@@ -13597,6 +13597,7 @@
 	patches.suse/efi-libstub-Fix-page-table-access-in-5-level-to-4-le.patch
 	patches.suse/ACPI-processor_core-fix-map_x2apic_id-for-amd-pstate.patch
 	patches.suse/ACPI-property-Fix-fwnode-refcount-leak-in-acpi_fwnod.patch
+	patches.suse/KEYS-trusted-Fix-a-memory-leak-in-tpm2_load_cmd.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
