crypto: af_alg - zero initialize memory allocated via sock_kmalloc (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13600,6 +13600,7 @@
 	patches.suse/KEYS-trusted-Fix-a-memory-leak-in-tpm2_load_cmd.patch
 	patches.suse/ima-Handle-error-code-returned-by-ima_filter_rule_ma.patch
 	patches.suse/crypto-caam-Add-check-for-kcalloc-in-test_len.patch
+	patches.suse/crypto-af_alg-zero-initialize-memory-allocated-via-s.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
