--- a/series.conf
+++ b/series.conf
@@ -13618,6 +13618,7 @@
 	patches.suse/wifi-ath11k-fix-peer-HE-MCS-assignment.patch
 	patches.suse/wifi-ath12k-fix-potential-memory-leak-in-ath12k_wow_.patch
 	patches.suse/wifi-cw1200-Fix-potential-memory-leak-in-cw1200_bh_r.patch
+	patches.suse/net-phy-adin1100-Fix-software-power-down-ready-condi.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
