--- a/series.conf
+++ b/series.conf
@@ -13604,6 +13604,7 @@
 	patches.suse/crypto-authenc-Correctly-pass-EINPROGRESS-back-up-to.patch
 	patches.suse/crypto-asymmetric_keys-prevent-overflow-in-asymmetri.patch
 	patches.suse/crypto-hisilicon-qm-restore-original-qos-values.patch
+	patches.suse/crypto-rockchip-drop-redundant-crypto_skcipher_ivsiz.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
