wifi: ath11k: fix peer HE MCS assignment (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13615,6 +13615,7 @@
 	patches.suse/lib-vsprintf-Check-pointer-before-dereferencing-in-t.patch
 	patches.suse/wifi-ath11k-restore-register-window-after-global-res.patch
 	patches.suse/wifi-ath11k-fix-VHT-MCS-assignment.patch
+	patches.suse/wifi-ath11k-fix-peer-HE-MCS-assignment.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
