--- a/series.conf
+++ b/series.conf
@@ -13613,6 +13613,7 @@
 	patches.suse/Documentation-tps6594-pfsm-Fix-macro-cross-reference.patch
 	patches.suse/Documentation-kernel-parameters-fix-typo-in-retbleed.patch
 	patches.suse/lib-vsprintf-Check-pointer-before-dereferencing-in-t.patch
+	patches.suse/wifi-ath11k-restore-register-window-after-global-res.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
