--- a/series.conf
+++ b/series.conf
@@ -13617,6 +13617,7 @@
 	patches.suse/wifi-ath11k-fix-VHT-MCS-assignment.patch
 	patches.suse/wifi-ath11k-fix-peer-HE-MCS-assignment.patch
 	patches.suse/wifi-ath12k-fix-potential-memory-leak-in-ath12k_wow_.patch
+	patches.suse/wifi-cw1200-Fix-potential-memory-leak-in-cw1200_bh_r.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
