Documentation: mrvl-cn10k-dpi: Fix macro cross-reference syntax (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13609,6 +13609,7 @@
 	patches.suse/crypto-ccree-Correctly-handle-return-of-sg_nents_for.patch
 	patches.suse/docs-w1-fix-w1-netlink-invalid-URL.patch
 	patches.suse/Documentation-parport-lowlevel-Separate-function-lis.patch
+	patches.suse/Documentation-mrvl-cn10k-dpi-Fix-macro-cross-referen.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
