--- a/series.conf
+++ b/series.conf
@@ -13602,6 +13602,7 @@
 	patches.suse/crypto-caam-Add-check-for-kcalloc-in-test_len.patch
 	patches.suse/crypto-af_alg-zero-initialize-memory-allocated-via-s.patch
 	patches.suse/crypto-authenc-Correctly-pass-EINPROGRESS-back-up-to.patch
+	patches.suse/crypto-asymmetric_keys-prevent-overflow-in-asymmetri.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
