--- a/series.conf
+++ b/series.conf
@@ -13623,6 +13623,7 @@
 	patches.suse/wifi-rtl818x-Fix-potential-memory-leaks-in-rtl8180_i.patch
 	patches.suse/wifi-rtl818x-rtl8187-Fix-potential-buffer-underflow-.patch
 	patches.suse/wifi-mt76-Fix-DTS-power-limits-on-little-endian-syst.patch
+	patches.suse/mt76-mt7615-Fix-memory-leak-in-mt7615_mcu_wtbl_sta_a.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
