--- a/series.conf
+++ b/series.conf
@@ -13612,6 +13612,7 @@
 	patches.suse/Documentation-mrvl-cn10k-dpi-Fix-macro-cross-referen.patch
 	patches.suse/Documentation-tps6594-pfsm-Fix-macro-cross-reference.patch
 	patches.suse/Documentation-kernel-parameters-fix-typo-in-retbleed.patch
+	patches.suse/lib-vsprintf-Check-pointer-before-dereferencing-in-t.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
