net: phy: aquantia: check for NVMEM deferral (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13626,6 +13626,7 @@
 	patches.suse/mt76-mt7615-Fix-memory-leak-in-mt7615_mcu_wtbl_sta_a.patch
 	patches.suse/wifi-ieee80211-correct-FILS-status-codes.patch
 	patches.suse/wifi-nl80211-vendor-cmd-intel-fix-a-blank-kernel-doc.patch
+	patches.suse/net-phy-aquantia-check-for-NVMEM-deferral.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
