wifi: ath12k: fix potential memory leak in ath12k_wow_arp_ns_offload() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13616,6 +13616,7 @@
 	patches.suse/wifi-ath11k-restore-register-window-after-global-res.patch
 	patches.suse/wifi-ath11k-fix-VHT-MCS-assignment.patch
 	patches.suse/wifi-ath11k-fix-peer-HE-MCS-assignment.patch
+	patches.suse/wifi-ath12k-fix-potential-memory-leak-in-ath12k_wow_.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
