--- a/series.conf
+++ b/series.conf
@@ -13601,6 +13601,7 @@
 	patches.suse/ima-Handle-error-code-returned-by-ima_filter_rule_ma.patch
 	patches.suse/crypto-caam-Add-check-for-kcalloc-in-test_len.patch
 	patches.suse/crypto-af_alg-zero-initialize-memory-allocated-via-s.patch
+	patches.suse/crypto-authenc-Correctly-pass-EINPROGRESS-back-up-to.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
