ima: Handle error code returned by ima_filter_rule_match() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13598,6 +13598,7 @@
 	patches.suse/ACPI-processor_core-fix-map_x2apic_id-for-amd-pstate.patch
 	patches.suse/ACPI-property-Fix-fwnode-refcount-leak-in-acpi_fwnod.patch
 	patches.suse/KEYS-trusted-Fix-a-memory-leak-in-tpm2_load_cmd.patch
+	patches.suse/ima-Handle-error-code-returned-by-ima_filter_rule_ma.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
