--- a/series.conf
+++ b/series.conf
@@ -13608,6 +13608,7 @@
 	patches.suse/crypto-iaa-Fix-incorrect-return-value-in-save_iaa_wq.patch
 	patches.suse/crypto-ccree-Correctly-handle-return-of-sg_nents_for.patch
 	patches.suse/docs-w1-fix-w1-netlink-invalid-URL.patch
+	patches.suse/Documentation-parport-lowlevel-Separate-function-lis.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
