wifi: mt76: Fix DTS power-limits on little endian systems (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13622,6 +13622,7 @@
 	patches.suse/wifi-mac80211-fix-CMAC-functions-not-handling-errors.patch
 	patches.suse/wifi-rtl818x-Fix-potential-memory-leaks-in-rtl8180_i.patch
 	patches.suse/wifi-rtl818x-rtl8187-Fix-potential-buffer-underflow-.patch
+	patches.suse/wifi-mt76-Fix-DTS-power-limits-on-little-endian-syst.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
