wifi: mac80211: fix CMAC functions not handling errors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13619,6 +13619,7 @@
 	patches.suse/wifi-ath12k-fix-potential-memory-leak-in-ath12k_wow_.patch
 	patches.suse/wifi-cw1200-Fix-potential-memory-leak-in-cw1200_bh_r.patch
 	patches.suse/net-phy-adin1100-Fix-software-power-down-ready-condi.patch
+	patches.suse/wifi-mac80211-fix-CMAC-functions-not-handling-errors.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
