Documentation/kernel-parameters: fix typo in retbleed= kernel parameter description (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13611,6 +13611,7 @@
 	patches.suse/Documentation-parport-lowlevel-Separate-function-lis.patch
 	patches.suse/Documentation-mrvl-cn10k-dpi-Fix-macro-cross-referen.patch
 	patches.suse/Documentation-tps6594-pfsm-Fix-macro-cross-reference.patch
+	patches.suse/Documentation-kernel-parameters-fix-typo-in-retbleed.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
