Documentation: tps6594-pfsm: Fix macro cross-reference syntax (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13610,6 +13610,7 @@
 	patches.suse/docs-w1-fix-w1-netlink-invalid-URL.patch
 	patches.suse/Documentation-parport-lowlevel-Separate-function-lis.patch
 	patches.suse/Documentation-mrvl-cn10k-dpi-Fix-macro-cross-referen.patch
+	patches.suse/Documentation-tps6594-pfsm-Fix-macro-cross-reference.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
