--- a/series.conf
+++ b/series.conf
@@ -13621,6 +13621,7 @@
 	patches.suse/net-phy-adin1100-Fix-software-power-down-ready-condi.patch
 	patches.suse/wifi-mac80211-fix-CMAC-functions-not-handling-errors.patch
 	patches.suse/wifi-rtl818x-Fix-potential-memory-leaks-in-rtl8180_i.patch
+	patches.suse/wifi-rtl818x-rtl8187-Fix-potential-buffer-underflow-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
