RDMA/irdma: Remove unused struct irdma_cq fields (git-fixes)
Refresh patches.suse/RDMA-irdma-Set-irdma_cq-cq_num-field-during-CQ-creat.patch

--- a/series.conf
+++ b/series.conf
@@ -34929,6 +34929,7 @@
 	patches.suse/RDMA-core-Resolve-MAC-of-next-hop-device-without-ARP.patch
 	patches.suse/IB-sa-Fix-sa_local_svc_timeout_ms-read-race.patch
 	patches.suse/RDMA-rxe-Fix-race-in-do_task-when-draining.patch
+	patches.suse/RDMA-irdma-Remove-unused-struct-irdma_cq-fields.patch
 	patches.suse/RDMA-siw-Always-report-immediate-post-SQ-errors.patch
 	patches.suse/dm-fix-queue-start-stop-imbalance-under-suspend-load.patch
 	patches.suse/dm-fix-NULL-pointer-dereference-in-__dm_suspend.patch
