--- a/series.conf
+++ b/series.conf
@@ -50555,6 +50555,7 @@
 	patches.suse/sctp-Fix-MAC-comparison-to-be-constant-time.patch
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
 	patches.suse/fs-udf-fix-OOB-read-in-lengthAllocDescs-handling.patch
+	patches.suse/RDMA-cm-Rate-limit-destroy-CM-ID-timeout-error-messa.patch
 	patches.suse/msft-hv-3336-uio_hv_generic-Let-userspace-take-care-of-interrupt-.patch
 	patches.suse/mm-ksm-fix-flag-dropping-behavior-in-ksm_madvise.patch
 	patches.suse/msft-hv-3361-scsi-storvsc-Prefer-returning-channel-with-the-same-.patch
