--- a/series.conf
+++ b/series.conf
@@ -50435,6 +50435,7 @@
 	patches.suse/codel-remove-sch-q.qlen-check-before-qdisc_tree_redu.patch
 	patches.suse/net_sched-sch_sfq-use-a-temporary-work-area-for-vali.patch
 	patches.suse/net_sched-sch_sfq-move-the-limit-validation.patch
+	patches.suse/RDMA-mlx5-Fix-compilation-warning-when-USER_ACCESS-i.patch
 	patches.suse/net-openvswitch-fix-nested-key-length-validation-in-the-se.patch
 	patches.suse/net_sched-hfsc-Fix-a-UAF-vulnerability-in-class-handling.patch
 	patches.suse/net_sched-hfsc-Fix-a-potential-UAF-in-hfsc_dequeue-too.patch
