RDMA/uverbs: Add empty rdma_uattrs_has_raw_cap() declaration (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -50528,6 +50528,7 @@
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-de.patch
 	patches.suse/RDMA-nldev-Check-CAP_NET_RAW-in-user-namespace-for-Q.patch
 	patches.suse/RDMA-counter-Check-CAP_NET_RAW-check-in-user-namespa.patch
+	patches.suse/RDMA-uverbs-Add-empty-rdma_uattrs_has_raw_cap-declar.patch
 	patches.suse/perf-core-Don-t-leak-AUX-buffer-refcount-on-allocation-fai.patch
 	patches.suse/perf-core-Exit-early-on-perf_mmap-fail.patch
 	patches.suse/perf-core-Prevent-VMA-split-of-buffer-mappings.patch
