--- a/series.conf
+++ b/series.conf
@@ -35352,6 +35352,7 @@
 	patches.suse/drm-msm-a6xx-Fix-out-of-bound-IO-access-in-a6xx_get_.patch
 	patches.suse/drm-msm-a6xx-Flush-LRZ-cache-before-PT-switch.patch
 	patches.suse/drm-mediatek-Fix-CCORR-mtk_ctm_s31_32_to_s1_n-functi.patch
+	patches.suse/drm-mediatek-Fix-device-node-reference-leak-in-mtk_d.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
