--- a/series.conf
+++ b/series.conf
@@ -35364,6 +35364,7 @@
 	patches.suse/ASoC-stm32-sai-fix-device-leak-on-probe.patch
 	patches.suse/ASoC-stm32-sai-fix-clk-prepare-imbalance-on-probe-fa.patch
 	patches.suse/ASoC-stm32-sai-fix-OF-node-leak-on-probe.patch
+	patches.suse/ASoC-Intel-catpt-Fix-error-path-in-hw_params.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
