drm/msm/a6xx: Flush LRZ cache before PT switch (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35350,6 +35350,7 @@
 	patches.suse/drm-msm-dpu-Remove-dead-code-in-dpu_encoder_helper_r.patch
 	patches.suse/drm-msm-a2xx-stop-over-complaining-about-the-legacy-.patch
 	patches.suse/drm-msm-a6xx-Fix-out-of-bound-IO-access-in-a6xx_get_.patch
+	patches.suse/drm-msm-a6xx-Flush-LRZ-cache-before-PT-switch.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
