ASoC: stm32: sai: fix clk prepare imbalance on probe failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35362,6 +35362,7 @@
 	patches.suse/ASoC-qcom-qdsp6-q6asm-dai-set-10-ms-period-and-buffe.patch
 	patches.suse/ASoC-qcom-q6asm-dai-perform-correct-state-check-befo.patch
 	patches.suse/ASoC-stm32-sai-fix-device-leak-on-probe.patch
+	patches.suse/ASoC-stm32-sai-fix-clk-prepare-imbalance-on-probe-fa.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
