--- a/series.conf
+++ b/series.conf
@@ -35356,6 +35356,7 @@
 	patches.suse/drm-nouveau-restrict-the-flush-page-to-a-32-bit-addr.patch
 	patches.suse/drm-amd-display-Fix-logical-vs-bitwise-bug-in-get_em.patch
 	patches.suse/drm-amdgpu-add-missing-lock-to-amdgpu_ttm_access_mem.patch
+	patches.suse/ASoC-fsl_xcvr-clear-the-channel-status-control-memor.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
