--- a/series.conf
+++ b/series.conf
@@ -35347,6 +35347,7 @@
 	patches.suse/gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
 	patches.suse/drm-gma500-Remove-unused-helper-psb_fbdev_fb_setcolr.patch
 	patches.suse/drm-vgem-fence-Fix-potential-deadlock-on-release.patch
+	patches.suse/drm-msm-dpu-Remove-dead-code-in-dpu_encoder_helper_r.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
