ASoC: qcom: qdsp6: q6asm-dai: set 10 ms period and buffer alignment (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35359,6 +35359,7 @@
 	patches.suse/ASoC-fsl_xcvr-clear-the-channel-status-control-memor.patch
 	patches.suse/ALSA-dice-fix-buffer-overflow-in-detect_stream_forma.patch
 	patches.suse/ASoC-qcom-q6adm-the-the-copp-device-only-during-last.patch
+	patches.suse/ASoC-qcom-qdsp6-q6asm-dai-set-10-ms-period-and-buffe.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
