drm/mediatek: Fix CCORR mtk_ctm_s31_32_to_s1_n function issue (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35351,6 +35351,7 @@
 	patches.suse/drm-msm-a2xx-stop-over-complaining-about-the-legacy-.patch
 	patches.suse/drm-msm-a6xx-Fix-out-of-bound-IO-access-in-a6xx_get_.patch
 	patches.suse/drm-msm-a6xx-Flush-LRZ-cache-before-PT-switch.patch
+	patches.suse/drm-mediatek-Fix-CCORR-mtk_ctm_s31_32_to_s1_n-functi.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
