hwmon: (max16065) Use local variable to avoid TOCTOU (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35367,6 +35367,7 @@
 	patches.suse/ASoC-Intel-catpt-Fix-error-path-in-hw_params.patch
 	patches.suse/hwmon-sy7636a-Fix-regulator_enable-resource-leak-on-.patch
 	patches.suse/hwmon-w83l786ng-Convert-macros-to-functions-to-avoid.patch
+	patches.suse/hwmon-max16065-Use-local-variable-to-avoid-TOCTOU.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
