ASoC: qcom: q6asm-dai: perform correct state check before closing (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35360,6 +35360,7 @@
 	patches.suse/ALSA-dice-fix-buffer-overflow-in-detect_stream_forma.patch
 	patches.suse/ASoC-qcom-q6adm-the-the-copp-device-only-during-last.patch
 	patches.suse/ASoC-qcom-qdsp6-q6asm-dai-set-10-ms-period-and-buffe.patch
+	patches.suse/ASoC-qcom-q6asm-dai-perform-correct-state-check-befo.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
