leds: leds-lp50xx: Allow LED 0 to be added to module bank (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35368,6 +35368,7 @@
 	patches.suse/hwmon-sy7636a-Fix-regulator_enable-resource-leak-on-.patch
 	patches.suse/hwmon-w83l786ng-Convert-macros-to-functions-to-avoid.patch
 	patches.suse/hwmon-max16065-Use-local-variable-to-avoid-TOCTOU.patch
+	patches.suse/leds-leds-lp50xx-Allow-LED-0-to-be-added-to-module-b.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
