drm/msm/a6xx: Fix out of bound IO access in a6xx_get_gmu_registers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35349,6 +35349,7 @@
 	patches.suse/drm-vgem-fence-Fix-potential-deadlock-on-release.patch
 	patches.suse/drm-msm-dpu-Remove-dead-code-in-dpu_encoder_helper_r.patch
 	patches.suse/drm-msm-a2xx-stop-over-complaining-about-the-legacy-.patch
+	patches.suse/drm-msm-a6xx-Fix-out-of-bound-IO-access-in-a6xx_get_.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
