drm/msm/a2xx: stop over-complaining about the legacy firmware (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35348,6 +35348,7 @@
 	patches.suse/drm-gma500-Remove-unused-helper-psb_fbdev_fb_setcolr.patch
 	patches.suse/drm-vgem-fence-Fix-potential-deadlock-on-release.patch
 	patches.suse/drm-msm-dpu-Remove-dead-code-in-dpu_encoder_helper_r.patch
+	patches.suse/drm-msm-a2xx-stop-over-complaining-about-the-legacy-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
