leds: netxbig: Fix GPIO descriptor leak in error paths (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35371,6 +35371,7 @@
 	patches.suse/leds-leds-lp50xx-Allow-LED-0-to-be-added-to-module-b.patch
 	patches.suse/leds-leds-lp50xx-LP5009-supports-3-modules-for-a-tot.patch
 	patches.suse/leds-leds-lp50xx-Enable-chip-before-any-communicatio.patch
+	patches.suse/leds-netxbig-Fix-GPIO-descriptor-leak-in-error-paths.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
