ASoC: qcom: q6adm: the the copp device only during last instance (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35358,6 +35358,7 @@
 	patches.suse/drm-amdgpu-add-missing-lock-to-amdgpu_ttm_access_mem.patch
 	patches.suse/ASoC-fsl_xcvr-clear-the-channel-status-control-memor.patch
 	patches.suse/ALSA-dice-fix-buffer-overflow-in-detect_stream_forma.patch
+	patches.suse/ASoC-qcom-q6adm-the-the-copp-device-only-during-last.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
