hwmon: sy7636a: Fix regulator_enable resource leak on error path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35365,6 +35365,7 @@
 	patches.suse/ASoC-stm32-sai-fix-clk-prepare-imbalance-on-probe-fa.patch
 	patches.suse/ASoC-stm32-sai-fix-OF-node-leak-on-probe.patch
 	patches.suse/ASoC-Intel-catpt-Fix-error-path-in-hw_params.patch
+	patches.suse/hwmon-sy7636a-Fix-regulator_enable-resource-leak-on-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
