power: supply: rt9467: Prevent using uninitialized local variable in rt9467_set_value_from_ranges() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35415,6 +35415,7 @@
 	patches.suse/Documentation-hid-alps-Fix-packet-format-section-hea.patch
 	patches.suse/power-supply-cw2015-Check-devm_delayed_work_autocanc.patch
 	patches.suse/power-supply-rt9467-Return-error-on-failure-in-rt946.patch
+	patches.suse/power-supply-rt9467-Prevent-using-uninitialized-loca.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
